 - Switched file dpi error messages to HTML.
 - Added a popup menu to form's submit button.
 - Added a right-click menu to the form submit button (allows to show hiddens).
 - Added the "http_language" dillorc option for setting HTTP's Accept-Language.
 - Refactored prefs.c to a much smaller size!
 - Fixed a SEGFAULT bug on redirections without Location.
   Patches: place (AKA corvid)
+- Switched SSL-enabled to configure.in (./configure --enable-ssl).
 - Standardised the installation of dpid/dpidrc with auto* tools.
 - Set the ScrollGroup as the resizable widget in downloads dpi.
 - Cleaned up and normalized D_SUN_LEN usage.
 - Fixed incorrect use of VOIDP2INT in Dialog_user_password_cb().
 - Ensure that the dlib dStr* functions are used everywhere.
 - Fixed a leak in Html_tag_open_link().
   Patches: Jeremy Henty
+- Implemented Basic authentication!
   Patch: Jeremy Henty, Jorge Arellano Cid
+- Allowed compilation with older machines by removing a few C99isms.
 - Added use of inttypes.h when stdint.h isn't found.
   Patches: Dan Fandrich
+- Made the DNS resolver report in numeric address notation.
   Patch: Justus Winter
+- Reduced warnings with gcc-4.3.
   Patch: Thomas Orgis
+- Made the parser recognize "[^ ]/>"-terminated XML elements.
   Patch: Johannes Hofmann
+- Added the "middle_click_drags_page" dillorc option.
   Patch: Jorge Arellano Cid, Thomas Orgis
+- Set the File menu label to hide when the File menu-button is shown.
 - Set a new iconv() test in configure.in.
 - Allowed the rc parser to skip whitespace around the equal sign.
 - Fixed the parser not to call Html_tag_close_* functions twice.
 - Implemented loading of remote CSS Stylesheet.
 - Made a big cleanup of cache.c WRT charset decoding (fixes bugs).
 - Made an extensive cleanup/fixup of the whole image handling process.
 - Implemented the tools button with a couple CSS options.
 - Removed the nav.h dependency from html.cc
 - Made the repush() operation more general and suited for CSS use.