@@ -29,6 +29,7 @@ dillo-2.1
  - Added the "http_language" dillorc option for setting HTTP's Accept-Language.
  - Refactored prefs.c to a much smaller size!
  - Fixed a SEGFAULT bug on redirections without Location.
+ - Implemented the "overline" text-decoration.
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
